Style: Fix mobile nav overlap

--- a/app/jf.css
+++ b/app/jf.css
@@ -92,7 +92,7 @@ body
 {
     display: grid;
     box-sizing: content-box;
-    grid-template-rows: 4em auto 2em;
+    grid-template-rows: auto auto 2em;
     gap: 1em 0;
     padding: 0 2em;
     max-width: 920px;
@@ -111,6 +111,7 @@ body > header
 }
 body > header h1
 {
+  text-wrap: nowrap;
   /* color: var(--highlight-color);
   text-shadow: rgba(0,0,0,65%) 0 2px 2px; */
 }
